--- a/css/styles.css
+++ b/css/styles.css
@@ -126,3 +126,25 @@ h1{
 .txt{
     font-size: 3rem;
 }
+.my_pic{
+    height: 20em;
+    width: 16rem;
+    border-radius: 20%;
+    padding: 20px;
+}
+.texts{
+    color: antiquewhite;
+    
+}
+.short-intro{
+    font-size: 1.2rem;
+}
+.h3_{
+    font-size: 2rem;
+    color: antiquewhite;
+    text-decoration: underline;
+}
+.heading{
+    color: antiquewhite;
+    text-decoration: underline;
+}
