--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,11 @@ h1{
 
 
 }
+.edu-image{
+    height: 200px;
+    width: 150px;
+    border-radius: 20%;
+}
 .texts_1{
     font-size: 1.5rem;
     color: antiquewhite;
@@ -214,4 +219,7 @@ ul{
 .im{
     height: 100px;
     width: 100px;
+}
+ul{
+    list-style-type: none;
 }
